--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700&family=Josefin+Slab:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600&family=Mulish:ital,wght@0,200;0,300;0,400;0,500;1,200;1,300;1,400&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700&family=Josefin+Slab:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600&family=Mulish:ital,wght@0,200;0,300;0,400;0,500;1,200;1,300;1,400&display=swap");
 
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css");
 
-*{
+* {
   margin: 0;
   padding: 0;
   list-style: none;
   text-decoration: none;
 }
-:root{
-  --font-primary:"Baloo da 2", serif;
+:root {
+  --font-primary: "Baloo da 2", serif;
   --font-secudary: "Josefin Slab", serif;
-  --font-action:"Mulish", serif;
+  --font-action: "Mulish", serif;
 }
-.hamburguer{
+.hamburguer {
   /* background-color: #ff00cc; */
   width: 2rem;
   height: 2rem;
@@ -30,26 +29,25 @@
 .show-menu .hamburguer {
   right: 16rem;
 }
-.line{
+.line {
   width: 100%;
   height: 0.1rem;
-  background-color:#fff;
+  background-color: #fff;
   box-shadow: 0.1rem 0.1rem 1px #000000;
   transition: transform 1s;
 }
-.show-menu #line1{
-  transform: rotate(45deg) translate(.3rem, .4rem );
+.show-menu #line1 {
+  transform: rotate(45deg) translate(0.3rem, 0.4rem);
 }
 
-.show-menu #line2{
+.show-menu #line2 {
   opacity: 0;
   visibility: hidden;
 }
-.show-menu #line3{
-  transform: rotate(-45deg) translate(.3rem, -.3rem );
-
+.show-menu #line3 {
+  transform: rotate(-45deg) translate(0.3rem, -0.3rem);
 }
-.hamburguer span{
+.hamburguer span {
   position: absolute;
   left: 3rem;
   height: 2rem;
@@ -57,25 +55,24 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color:#a044ff;
+  background-color: #155799;
   color: #fff;
   font-family: var(--font-action);
   opacity: 0;
 }
 
-.hamburguer span::before{
+.hamburguer span::before {
   content: "";
   position: absolute;
-  border-right: .5rem solid #a044ff;
-  border-top: .5rem solid transparent;
-  border-left: .5rem solid transparent;
-  border-bottom: .5rem solid transparent;
+  border-right: 0.5rem solid #155799;
+  border-top: 0.5rem solid transparent;
+  border-left: 0.5rem solid transparent;
+  border-bottom: 0.5rem solid transparent;
   left: -1rem;
 }
-.show-menu .hamburguer:hover span{
-  opacity:1;
+.show-menu .hamburguer:hover span {
+  opacity: 1;
 }
-
 
 header {
   width: 100%;
@@ -83,14 +80,13 @@ header {
   overflow: hidden;
   position: relative;
 }
-.img-wrapper{
+.img-wrapper {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background-color: rgba(0,0,0,0.8);
-
+  background-color: rgba(0, 0, 0, 0.8);
 }
-.img-wrapper img{
+.img-wrapper img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -98,109 +94,112 @@ header {
   animation: zoom 25s;
 }
 
-@keyframes zoom{
-  0%{
+@keyframes zoom {
+  0% {
     transform: scale(1.3);
   }
-  100%{
+  100% {
     transform: scale(1);
   }
 }
 
-.banner{
+.banner {
   position: absolute;
   top: 30%;
   left: 15%;
 }
-.banner h1{
-  color:#ffffff;
+.banner h1 {
+  color: #ffffff;
   font-size: 3.5rem;
   font-family: var(--font-primary);
   font-weight: 300;
-  text-shadow:.2rem .3rem 2px rgba(0, 0, 0,.4);
+  text-shadow: 0.2rem 0.3rem 2px rgba(0, 0, 0, 0.4);
   line-height: 3.5rem;
   margin-bottom: 2rem;
   opacity: 0;
   animation: moveBanner 1s 0.5s forwards;
 }
-.banner p{
-  font-family:var(--font-secudary);
+.banner p {
+  font-family: var(--font-secudary);
   color: #fff;
   font-size: 2rem;
-  text-shadow: .2rem .2rem  rgba(0, 0, 0,.4);
+  text-shadow: 0.2rem 0.2rem rgba(0, 0, 0, 0.4);
   margin-bottom: 2rem;
   opacity: 0;
   animation: moveBanner 1s 0.7s forwards;
-
 }
-.banner button{
+.banner button {
   font-family: var(--font-action);
   color: #fff;
   font-size: 1rem;
   text-transform: uppercase;
-  letter-spacing: .1rem;
-  background: #ff00cc;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #333399, #ff00cc);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to left, #333399, #ff00cc); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  letter-spacing: 0.1rem;
+  background: #159957; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #155799,
+    #159957
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #155799,
+    #159957
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
   padding: 1rem 3rem;
   border-radius: 7px;
   cursor: pointer;
   opacity: 0;
   animation: moveBanner 1s 0.9s forwards;
-
-
 }
-.banner button:hover{
+.banner button:hover {
   color: #000;
-  background: #b038bb;
-  
+  background: #7097be;
 }
-@keyframes moveBanner{
-  0%{
+@keyframes moveBanner {
+  0% {
     transform: translateY(10rem) rotateY(-30deg);
   }
-  100%{
+  100% {
     transform: translateY(0) rotateY(0);
     opacity: 1;
   }
-
 }
-.sidebar{
+.sidebar {
   width: 20rem;
   height: 100vh;
   background-color: #fff;
   position: fixed;
   top: 0;
   right: -20rem;
-  transition:all 1s;
+  transition: all 1s;
   z-index: 80;
 }
 
-.show-menu .sidebar{
+.show-menu .sidebar {
   right: 0;
 }
 
-.menu{
+.menu {
   position: absolute;
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
-.menu-item{
-  text-align:center;
+.menu-item {
+  text-align: center;
   margin-bottom: 0.5rem;
 }
-.menu-link{
+.menu-link {
   font-family: var(--font-action);
   font-size: 2rem;
   color: #555;
-  transition: color .9s;
-
+  transition: color 0.9s;
 }
-.menu-link:hover{
-  color: #b038bb ;
+.menu-link:hover {
+  color: #7097be;
 }
-.social-media{
+.social-media {
   /* background-color:rgba(255,0,0,.5); */
   position: absolute;
   bottom: 2rem;
@@ -208,9 +207,9 @@ header {
   display: flex;
   justify-content: space-evenly;
 }
-.social-media i{
-  background-color:#4b2075;
-  color:rgba(255, 255, 255,1);
+.social-media i {
+  background-color: #155799;
+  color: rgba(255, 255, 255, 1);
   height: 2.5rem;
   width: 2.5rem;
   font-size: 1.5rem;
@@ -218,194 +217,199 @@ header {
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  transition:background-color .9s;
+  transition: background-color 0.9s;
 }
-.social-media i:hover{
-  background-color:#7f39c5;
+.social-media i:hover {
+  background-color: #7097be;
 }
-.conhecimentos{
-  display:grid;
+.conhecimentos {
+  display: grid;
   grid-template-columns: repeat(16, 1fr);
   grid-template-rows: repeat(6, 6rem);
-  row-gap: .5rem;
+  row-gap: 0.5rem;
 }
-.conhecimento:nth-child(1){
-  grid-column: 4 / 7 ;
+.conhecimento:nth-child(1) {
+  grid-column: 4 / 7;
   grid-row: 1 /3;
 }
 
-.conhecimento:nth-child(2){
-  grid-column: 3 / 6 ;
+.conhecimento:nth-child(2) {
+  grid-column: 3 / 6;
   grid-row: 3 /5;
 }
-.conhecimento:nth-child(3){
-  grid-column: 4 / 7 ;
+.conhecimento:nth-child(3) {
+  grid-column: 4 / 7;
   grid-row: 5 /-1;
 }
-.conhecimento:nth-child(4){
-  grid-column: 11 / 14 ;
+.conhecimento:nth-child(4) {
+  grid-column: 11 / 14;
   grid-row: 1 /3;
 }
-.conhecimento:nth-child(5){
-  grid-column: 12 / 15 ;
+.conhecimento:nth-child(5) {
+  grid-column: 12 / 15;
   grid-row: 3 /5;
 }
-.conhecimento:nth-child(6){
-  grid-column: 11 / 14 ;
+.conhecimento:nth-child(6) {
+  grid-column: 11 / 14;
   grid-row: 5 /-1;
 }
-.sessao-conhecimentos{
-  background-color:#f5f5f5;
+.sessao-conhecimentos {
+  background-color: #f5f5f5;
 }
-.sessao-header{
+.sessao-header {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.sessao-header h1{
-  font-family:var(--font-primary);
+.sessao-header h1 {
+  font-family: var(--font-primary);
   font-size: 3rem;
   color: #4b4b4b;
-  border-bottom: solid 3px #6a3093;
+  border-bottom: solid 3px #155799;
   margin-bottom: 1.5rem;
 }
 .conhecimento-header {
   display: flex;
   align-items: center;
   color: #4b4b4b;
-
 }
 
-.conhecimento-header i{
+.conhecimento-header i {
   font-size: 2.5rem;
 }
-.conhecimento-header h3{
+.conhecimento-header h3 {
   font-family: var(--font-secudary);
   font-size: 2rem;
   padding-left: 1rem;
 }
-.conhecimeto-text{
+.conhecimeto-text {
   font-family: var(--font-secudary);
   margin-top: 1rem;
-
-
 }
-.conhecimentos-img-wrapper{
+.conhecimentos-img-wrapper {
   grid-column: 7 / 11;
   grid-row: 2/6;
-  width:100%;
-}
-.conhecimentos-img-wrapper img{
-  object-fit:cover;
   width: 100%;
-
 }
-.projetos{
-  display:flex;
-  justify-content:space-evenly;
+.conhecimentos-img-wrapper img {
+  object-fit: cover;
+  width: 100%;
 }
-.card{
+.projetos {
+  display: flex;
+  justify-content: space-evenly;
+}
+.card {
   width: 18rem;
   height: 25rem;
   position: relative;
 }
-.card-img-wrapper{
+.card-img-wrapper {
   width: 100%;
   height: 100%;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   background-color: #555;
-
 }
-.card-img-wrapper img{
-  object-fit:cover;
+.card-img-wrapper img {
+  object-fit: cover;
   width: 100%;
   height: 100%;
-  border-radius: .5rem;
-  opacity: .8;
-  transition:opacity .3s;
+  border-radius: 0.5rem;
+  opacity: 0.8;
+  transition: opacity 0.3s;
 }
-.card:hover .card-img-wrapper img{
-  opacity: .5;
+.card:hover .card-img-wrapper img {
+  opacity: 0.5;
 }
-.card-info{
+.card-info {
   opacity: 0;
   visibility: hidden;
   position: absolute;
-  bottom:0;
+  bottom: 0;
   padding: 2rem;
-  text-shadow:0.3rem 0.2rem 0.3rem rgba(0,0,0,.6) ;
-  transition:all .3s;
+  text-shadow: 0.3rem 0.2rem 0.3rem rgba(0, 0, 0, 0.6);
+  transition: all 0.3s;
 }
 
-.card-info h2{
+.card-info h2 {
   font-family: var(--font-primary);
   font-size: 2rem;
   font-weight: 500;
   color: #eee;
-
 }
-.card-info h3{
+.card-info h3 {
   font-family: var(--font-action);
   font-weight: bolder;
-  color: #f323f3dc ;
+  color: #f323f3dc;
   margin-bottom: 1.5rem;
+}
+.card-info p {
+  font-family: var(--font-secundary);
+  color: #eee;
+  font-weight: 400;
+  width: 80%;
+  margin-bottom: 2rem;
+}
+.btn {
+  /* background: #ff00cc;  /* fallback for old browsers */
+  /* background: -webkit-linear-gradient(to right, #333399, #ff00cc);  /* Chrome 10-25, Safari 5.1-6 */
+  /*background: linear-gradient(to left, #333399, #ff00cc); W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #159957; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #155799,
+    #159957
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #155799,
+    #159957
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
-}
-.card-info p{
- font-family: var(--font-secundary);
- color: #eee;
- font-weight: 400;
- width:80%;
- margin-bottom:2rem;
-}
-.btn{
-  background: #ff00cc;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #333399, #ff00cc);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to left, #333399, #ff00cc); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   font-family: var(--font-action);
-  font-size: .8rem;
-  color:#eee;
-  border-radius: .5rem;
+  font-size: 0.8rem;
+  color: #eee;
+  border-radius: 0.5rem;
   border: none;
-  box-shadow: 0 .1rem .8rem rgba(0, 0, 0,.4);
+  box-shadow: 0 0.1rem 0.8rem rgba(0, 0, 0, 0.4);
 }
-.card-info button{
+.card-info button {
   width: 8rem;
   height: 2.5rem;
 }
-.card:hover .card-info{
+.card:hover .card-info {
   bottom: 2rem;
-  opacity:1;
+  opacity: 1;
   visibility: visible;
-
 }
-.sessao-contato{
+.sessao-contato {
   width: 100%;
-  height:100vh;
+  height: 100vh;
   background-color: #272727;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.contato-wrapper{
+.contato-wrapper {
   width: 60%;
   height: 30rem;
   display: flex;
   box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.5);
 }
-.contato-left{
+.contato-left {
   width: 35%;
- 
-  background: linear-gradient(rgba(15,15,15, .6),rgba(22,22,22, .9)),url('/img/diana-akhmetianova-s358rpxEALI-unsplash.jpg');
-  background-size:cover;
+
+  background: linear-gradient(rgba(15, 15, 15, 0.6), rgba(22, 22, 22, 0.9)),
+    url("/img/diana-akhmetianova-s358rpxEALI-unsplash.jpg");
+  background-size: cover;
 }
-.contato-right{
+.contato-right {
   width: 65%;
   background-color: #eee;
   padding: 1rem 3rem 3rem 3rem;
-
 }
-.sessao-contato h1{
+.sessao-contato h1 {
   width: 100%;
   text-align: center;
   font-family: var(--font-primary);
@@ -413,33 +417,32 @@ header {
   font-size: 3rem;
   font-weight: lighter;
 }
-.sessao-contato form{
+.sessao-contato form {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.input-group{
+.input-group {
   position: relative;
 }
-.field{
+.field {
   background: transparent;
   border: none;
-  width:20rem;
+  width: 20rem;
   font-size: 1.5rem;
   font-family: var(--font-secudary);
   border-bottom: 2px dashed #636363;
   height: 3rem;
   outline: none;
   margin: 1rem 0;
-
 }
-.input-group textarea{
+.input-group textarea {
   padding-top: 1rem;
   max-width: 25rem;
   max-height: 3rem;
 }
-.field-label{
+.field-label {
   position: absolute;
   left: 0;
   margin-bottom: 1rem;
@@ -448,18 +451,94 @@ header {
   text-transform: uppercase;
   transition: all 0.3s;
 }
-.field:focus ~ label{
+.field:focus ~ label {
   top: 0;
   font-size: 0.7rem;
-
 }
-.field:focus{
-  border-bottom: 1px solid ;
+.field:focus {
+  border-bottom: 1px solid;
 }
-.btn-submit{
+.btn-submit {
   font-size: 1.2rem;
   text-transform: uppercase;
-  width: 100%;
-  height: 2rem;
+  width: 80%;
+  height: 2.5rem;
   margin-top: 1rem;
+  letter-spacing: 0.2rem;
+  cursor: pointer;
+  text-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.3);
+}
+
+.preenchido {
+  pointer-events: none;
+}
+.sessao-orcamento {
+  width: 100%;
+  height: 100vh;
+  background: url("/img/bg-orcamento.jpg");
+  object-fit: cover;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+}
+.orcamento-wrapper {
+  width: 60%;
+  height: 80%;
+  background-color: #ffffff99;
+  border-radius: 10px;
+  box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.5);
+  position: relative;
+}
+.sessao-orcamento h1 {
+  position: absolute;
+  top: -2.5rem;
+  left: 2rem;
+  background: #159957; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #155799,
+    #159957
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #155799,
+    #159957
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  padding: 0 3rem;
+  color: #fff;
+  font-family: var(--font-primary);
+  font-size: 3rem;
+  font-weight: lighter;
+  box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+}
+.sessao-orcamento form{
+  margin: 4rem;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  column-gap: 2rem;
+  row-gap: 2rem;
+}
+.sessao-orcamento label{
+  font-family: var(--font-secudary);
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+.sessao-orcamento input[type="number"]{
+  font-family: var(--font-secudary);
+  width:4rem;
+  font-size: 2rem;
+  outline:none;
+  border-radius: 10px;
+  border: none;
+  padding: 0.3rem;
+
+}
+.btn-orcamento{
+  text-transform: uppercase;
+  padding: 1rem;
+  cursor: pointer;
+  grid-column: 2;
 }
