--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,7 @@ header {
 }
 .banner button:hover {
   color: #000;
-  background: #7097be;
+  background: #4d9ff1;
 }
 @keyframes moveBanner {
   0% {
@@ -171,7 +171,8 @@ header {
 .sidebar {
   width: 20rem;
   height: 100vh;
-  background-color: #fff;
+  background-color: #ffffff99;
+  opacity: 1;
   position: fixed;
   top: 0;
   right: -20rem;
@@ -200,7 +201,7 @@ header {
   transition: color 0.9s;
 }
 .menu-link:hover {
-  color: #7097be;
+  color: #1f89f3;
 }
 .social-media {
   /* background-color:rgba(255,0,0,.5); */
@@ -580,7 +581,7 @@ footer{
 }
 #link-topo{
   position: fixed;
-  right: 3rem;
+  left: 3rem;
   bottom: 3rem;
   width: 3rem;
   height: 3rem;
